--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,6 +16,9 @@
     
         
         <div class="mainDiv">
+
+            <h2>Luzia Gunzenhauser</h2>
+
             <img src="portrait.jpg">
                 <div class="text">
                     <p1>Name: Luzia Gunzenhauser</p1> <br>
