--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -25,6 +25,7 @@
                     <p2>Alter: 21</p2> <br>
                     <p3>Wohnort: Freiburg</p3> <br>
                     <p4>Was ich studiere: Medienkonzeption</p4>
+                    <p5>Lieblingsessen: Pasta</p5>
 
                 </div>
         </div>
