--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,7 +18,9 @@
         <div class="mainDiv">
 
             <h2>Luzia Gunzenhauser</h2>
-                <div class="aufgaben">Aufgaben: </div>
+                <div class="aufgaben">
+                        <h2>Luzia Gunzenhauser</h2> <br>
+                        Aufgaben: </div>
             <img src="portrait.jpg">
                 <div class="text">
                     <p1>Name: Luzia Gunzenhauser</p1> <br>
