--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,7 +18,10 @@
         <div class="mainDiv">
 
             <h2>Luzia Gunzenhauser</h2>
-                <div class="aufgaben">Aufgaben: </div>
+                <div class="aufgaben">Aufgaben: </div> <br>
+                <a href="luziagu.github.io/EIA2/L01_Aufgabe/L01_Luzia_Gunzenhauser.pdf" target="_blank">Aufgabe 01 - PDF </a> (23.04.2020) <br>
+                <a href="luziagu.github.io/EIA2/L01_Aufgabe/Lo1.html" target="_blank">Aufgabe 01 - html </a> (23.04.2020) <br>
+                
             <img src="portrait.jpg">
                 <div class="text">
                     <p1>Name: Luzia Gunzenhauser</p1> <br>
