--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,8 +19,8 @@
 
             <h2>Luzia Gunzenhauser</h2>
                 <div class="aufgaben">Aufgaben: </div> <br>
-                <a href="luziagu.github.io/EIA2/../L01_Aufgabe/L01_Luzia_Gunzenhauser.pdf" target="_blank">Aufgabe 01 - PDF </a> (23.04.2020) <br>
-                <a href="luziagu.github.io/EIA2/../L01_Aufgabe/Lo1.html" target="_blank">Aufgabe 01 - html </a> (23.04.2020) <br>
+                <a href="luziagu.github.io/../L01_Aufgabe/L01_Luzia_Gunzenhauser.pdf" target="_blank">Aufgabe 01 - PDF </a> (23.04.2020) <br>
+                <a href="luziagu.github.io/../L01_Aufgabe/Lo1.html" target="_blank">Aufgabe 01 - html </a> (23.04.2020) <br>
                 
             <img src="portrait.jpg">
                 <div class="text">
