--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,7 +20,7 @@
             Aufgaben:
         </h2>
         <p>
-            <a href="../" target="_blank">Repository</a>
+            <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a>
             <a href="../L01_Aufgabe/L01_Luzia_Gunzenhauser.pdf" target="_blank">Aufgabe 01 - PDF </a> (23.04.2020) <br>
             <a href="../L01_Aufgabe/Lo1.html" target="_blank">Aufgabe 01 - html </a> (23.04.2020) <br>
          </p>
