--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,7 +21,7 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
-            <a href="../Sequenzememory/Konzeption/konzeption-sequenzmemory.pdf" target="_blank"> Sequenzmemory - PDF </a>
+            <a href="../Sequenzememory/Konzeption/konzeption-sequenzmemory.pdf" target="_blank"> Sequenzmemory - PDF </a> |
             <a href="../Sequenzememory/sequencememory.html" target="_blank"> Sequenzmemory</a><br>
             <a href="../L01_Aufgabe/L01_Luzia_Gunzenhauser.pdf" target="_blank">Aufgabe 01 - PDF </a> (23.04.2020) <br>
             <a href="../L01_Aufgabe/Lo1.html" target="_blank">Aufgabe 01 - html </a> (23.04.2020) <br>
