--- a/L03_FormElements/FormElements.html
+++ b/L03_FormElements/FormElements.html
@@ -10,7 +10,7 @@
 
 <body>
 	<h1>Form-Elements</h1>
-	<!-- <fieldset id="fsText">
+	 <fieldset id="fsText">
 		<legend> Text-Input </legend>
 		Simple
 		<input type="text" name="Text" placeholder="type here" required />
@@ -29,9 +29,9 @@
 		<hr />
 		Area
 		<textarea name="Area" rows="3" placeholder="long text here"></textarea>
-	</fieldset> -->
+	</fieldset>
 
-	<!-- <fieldset id="fsSelection">
+	<fieldset id="fsSelection">
 		<legend> Selection </legend>
 		Datalist
 		<input type="text" name="Datalist" list="options" placeholder="what to buy?"/>
@@ -61,7 +61,7 @@
 		<label for="check3">Checkbox 3</label>
 		<hr />
 		Select Box
-		<select name="Select" id="select">
+		<select name="Select" id="select" multiple>
 			<optgroup label="OptGroup1"></optgroup>
 			<option value="option1">First Option</option>
 			<option value="option2" selected>Second Option</option>
@@ -69,13 +69,12 @@
 			<option value="option3">Third Option</option>
 			<option value="option4">Fourth Option</option>
 		</select>
-	</fieldset> -->
+	</fieldset> 
 
-
-	<!-- <fieldset id="fsSpecial">
+	<fieldset id="fsSpecial">
 		<legend> Special </legend>
 		Slider
-		<input type="range" name="Slider" min="0" max="1" step="0.1" value="0" />
+		<input type="range" name="Slider" min="0" max="1" step="0.1" value="2" />
 		<hr />
 		Stepper
 		<input type="number" name="Stepper" step="0.1" min="-1" max="1" value="0" />
@@ -85,9 +84,9 @@
 		<hr />
 		Date
 		<input type="date" name="Date"/>
-	</fieldset> -->
+	</fieldset> 
 
-	<!-- <fieldset id="fsOutput">
+	<fieldset id="fsOutput">
 		<legend> Output </legend>
 		Progress
 		<progress value="0" max="1"> </progress>
@@ -97,8 +96,7 @@
 		<hr />
 		Output
 		<output name="out">Color picked</output>
-	</fieldset> -->
-
+	</fieldset> 
 </body>
 
 </html>
