--- a/Formular/formular.html
+++ b/Formular/formular.html
@@ -120,7 +120,19 @@
     <hr>
     <div id="bestellung">
         <h4>DEINE BESTELLUNG</h4>
+        <div id="diveinkauf"></div>
+        <div id="divhaushalt"></div>
+
+
+        <p>Gesamtkosten:<span id="gesamt"></span> €</p>
+
+
+
     </div>
+    <h6>Script in Teilen von Valentina Schwan übernommen</h6>
+   
+
+    
 
 </body>
 </html>
