--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,7 +21,7 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
-            <a href="../Haushaltshilfe-Update /haushaltshilfe.html" target="_blank"> Haushaltshilfe Datastructue - Code</a><br>|
+            <a href="../Haushaltshilfe-Update /haushaltshilfe.html" target="_blank"> Haushaltshilfe 04- Code</a><br>|
             <a href="../Haushaltshilfe-Update /Konzept/Konzept-Haushaltshilfe-dynamisch.pdf" target="_blank"> Formular - Konzepz</a><br>
             <a href="../Formular/Formular.pdf" target="_blank"> Formular - PDF </a> |
             <a href="../Formular/formular.html" target="_blank"> Formular - Code</a><br>
