Css-Style-Haushaltshilfe

--- a/Haushaltshilfe-Update/haushaltshilfe.html
+++ b/Haushaltshilfe-Update/haushaltshilfe.html
@@ -107,7 +107,7 @@
         <div id="divhaushalt"></div>
 
 
-        <p>Gesamtkosten:<span id="gesamt"></span> €</p>
+        <p id="gesamtP">Gesamtkosten:<span id="gesamt"></span> €</p>
 
         <button type="reset" id="restart" form="orderForm">Hinzufügen</button>
         <button type="button" id="buttonFertig" form="orderForm">Fertig/Abschicken</button>
