--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,6 +21,8 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
+            <a href="../Haushaltshilfe-Update /Konzept/Konzept-server" target="_blank"> Database- PDF </a> |
+            <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Database-Code</a><br>
             <a href="../Haushaltshilfe-Update /Konzept/Konzept-server" target="_blank"> Server - PDF </a> |
             <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Haushaltshilfe-Server-Code</a><br>
             <a href="../Haushaltshilfe-Update /Konzept/Konzept-Client.pdf" target="_blank"> Client - PDF </a> |
