--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,14 +21,14 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
-            <a href="../Haushaltshilfe-Update /Konzept/Konzept-server" target="_blank"> Database- PDF </a> |
+            <a href="../Haushaltshilfe-Update/Konzept/Database-konzept.pdf" target="_blank"> Database- PDF </a> |
             <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Database-Code</a><br>
-            <a href="../Haushaltshilfe-Update /Konzept/Konzept-server" target="_blank"> Server - PDF </a> |
+            <a href="../Haushaltshilfe-Update/Konzept/Konzept-server" target="_blank"> Server - PDF </a> |
             <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Haushaltshilfe-Server-Code</a><br>
-            <a href="../Haushaltshilfe-Update /Konzept/Konzept-Client.pdf" target="_blank"> Client - PDF </a> |
-            <a href="../Haushaltshilfe-Update /haushaltshilfe.html" target="_blank"> Haushaltshilfe-Client - Code</a><br>
-            <a href="../Haushaltshilfe-Update /haushaltshilfe.html" target="_blank"> Haushaltshilfe 04- Code</a><br>|
-            <a href="../Haushaltshilfe-Update /Konzept/Konzept-Haushaltshilfe-dynamisch.pdf" target="_blank"> Formular - Konzepz</a><br>
+            <a href="../Haushaltshilfe-Update/Konzept/Konzept-Client.pdf" target="_blank"> Client - PDF </a> |
+            <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Haushaltshilfe-Client - Code</a><br>
+            <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Haushaltshilfe 04- Code</a><br>|
+            <a href="../Haushaltshilfe-Update/Konzept/Konzept-Haushaltshilfe-dynamisch.pdf" target="_blank"> Formular - Konzepz</a><br>
             <a href="../Formular/Formular.pdf" target="_blank"> Formular - PDF </a> |
             <a href="../Formular/formular.html" target="_blank"> Formular - Code</a><br>
             <a href="../Sequenzememory/Konzeption/konzeption-sequenzmemory.pdf" target="_blank"> Sequenzmemory - PDF </a> |
