--- a/Haushaltshilfe-Update/haushaltshilfe.html
+++ b/Haushaltshilfe-Update/haushaltshilfe.html
@@ -119,6 +119,8 @@
         <button type="button" id="show">Zeigen</button>
         <button type="button" id="hide">Verstecken</button>
         <span id="databaseContent"></span>
+    </fieldset>
+    
     <h6>Script in Teilen von Valentina Schwan aus Aufgabe 03 übernommen</h6>
 
 </body>
