--- a/Haushaltshilfe-Update/haushaltshilfe.html
+++ b/Haushaltshilfe-Update/haushaltshilfe.html
@@ -8,6 +8,7 @@
    
     <script src="generateContent.js"></script>
     <script src="script.js"></script>
+    <script src="Server/Server.js"></script>
     <title>Haushaltshilfe</title>
 </head>
 <body>
@@ -120,7 +121,7 @@
         <button type="button" id="hide">Verstecken</button>
         <span id="databaseContent"></span>
     </fieldset>
-    
+
     <h6>Script in Teilen von Valentina Schwan aus Aufgabe 03 übernommen</h6>
 
 </body>
