--- a/Corona-Canvas/corona.html
+++ b/Corona-Canvas/corona.html
@@ -8,7 +8,7 @@
     <title>Corona-Virus</title>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas height="750" width="520"></canvas>
     
 </body>
 </html>
