--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,6 +21,8 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
+            <a href="../Corona-Canvas/Konzept/Scribble-konzept.pdf" target="_blank"> Corona-Konzept </a> |
+            <a href="../Corona-Canvas/corona.html" target="_blank"> Corona-Code</a><br>
             <a href="../Haushaltshilfe-Update/Konzept/Database-konzept.pdf" target="_blank"> Database- PDF </a> |
             <a href="../Haushaltshilfe-Update/haushaltshilfe.html" target="_blank"> Database-Code</a><br>
             <a href="../Haushaltshilfe-Update/Konzept/Konzept-server" target="_blank"> Server - PDF </a> |
