--- a/Corona-Animation/corona.html
+++ b/Corona-Animation/corona.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="Main /main.ts"></script>
-    <script src="Vektor/Vektor.ts"></script>
-    <scrip src="Particles/particles.ts"></scrip>
+    <script src="Main /main.js"></script>
+    <script src="Vektor/Vektor.js"></script>
+    <scrip src="Particles/particles.js"></scrip>
     <title>Corona-Virus</title>
 </head>
 <body>
