--- a/Corona-Canvas/corona.html
+++ b/Corona-Canvas/corona.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="corona.js"></script>
-    <script src="Vektor/Vektor.ts"></script>
-    <scrip src="Particles/particles.ts"></scrip>
+    <script src="Vektor/Vektor.js"></script>
+    <scrip src="Particles/particles.js"></scrip>
     <title>Corona-Virus</title>
 </head>
 <body>
