--- a/Corona-Animation/corona.html
+++ b/Corona-Animation/corona.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="Main /main.js"></script>
+    <script src="Pattern/pattern.js"></script>
     <script src="Vektor/Vektor.js"></script>
+    <script src="Killercell/killercell.js"></script>
+    <script src="Antibody/antibody.js"></script>
+    <script src="Corona/corona.js"></script>
+    <script src="HumanCell/humanCell.js"></script>
     <scrip src="Particles/particles.js"></scrip>
     <title>Corona-Virus</title>
 </head>
 <body>
-    <canvas height="750" width="520"></canvas>
+
+    <canvas height="550" width="310"></canvas>
     
 </body>
 </html>
