--- a/Corona-Animation/corona.html
+++ b/Corona-Animation/corona.html
@@ -11,7 +11,7 @@
     <script src="Antibody/antibody.js"></script>
     <script src="Corona/corona.js"></script>
     <script src="HumanCell/humanCell.js"></script>
-    <scrip src="Particles/particles.js"></scrip>
+    <script src="Particles/particles.js"></script>
     <title>Corona-Virus</title>
 </head>
 <body>
