--- a/Corona-Animation/corona.html
+++ b/Corona-Animation/corona.html
@@ -18,6 +18,8 @@
 <body>
 
     <canvas height="550" width="310"></canvas>
+
+    <footer style="font-size: 10px" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Neue Funktionsansätze von Valentina Schwan.</footer>
     
 </body>
 </html>
