--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,8 +21,8 @@
         </h2>
         <p>
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
-            <a href="../Corona-Animation/Konzept/Konzept-Corona-Animation.pdf" target="_blank"> Corona-Animation-Konzept </a> |
-            <a href="../Corona-Animation/corona.html" target="_blank"> Corona-Code (versucht)</a><br>
+            <a href="../Corona-Animation/Konzept/Konzept-Corona-Animation.pdf" target="_blank"> Corona-Konzept-Aufgabe-10 </a> |
+            <a href="../Corona-Animation/corona.html" target="_blank"> Corona-Code-Aufgabe-10</a><br>
             <a href="../Corona-Canvas/Konzept/Scribble-konzept.pdf" target="_blank"> Corona-Konzept </a> |
             <a href="../Corona-Canvas/corona.html" target="_blank"> Corona-Code</a><br>
             <a href="../Haushaltshilfe-Update/Konzept/Database-konzept.pdf" target="_blank"> Database- PDF </a> |
