--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,6 +20,13 @@
             Aufgaben:
         </h2>
         <p>
+            <h3>Endabgabe Zauberbild</h3>
+
+            <a href="../../../../Desktop/2.Semester/Abschlussarbeit_SOSE2020/zauberbild.html" target="_blank"> Zauberbild Anwendung </a>  <br> 
+            <a href="../../../../Desktop/2.Semester/Abschlussarbeit_SOSE2020/Archiv.zip" target="_blank"> Archiv </a>  <br>
+            <a href="../../../../Desktop/2.Semester/Abschlussarbeit_SOSE2020/Konzept_Abschlussarbeit/Konzept_Zauberbild_Luzia_Gunzenhauser.pdf" target="_blank"> Konzept Zauberbild </a>  <br>
+            <a href="https://github.com/luziagu/Abschlussarbeit_SOSE2020" target="_blank"> Zauberbild Repository </a>  <br> <br>
+
             <a href="https://github.com/luziagu/EIA2" target="_blank">Repository</a> <br>
             <a href="../Corona-Animation/Konzept/Konzept-Corona-Animation.pdf" target="_blank"> Corona-Konzept-Aufgabe-11 </a> |
             <a href="../Corona-Animation/corona.html" target="_blank"> Corona-Code-Aufgabe-11</a><br>
